Completed the project

--- a/CountDown-Timer/css/__variables.scss
+++ b/CountDown-Timer/css/__variables.scss
@@ -6,3 +6,10 @@ $primary-bg: '../img/snow.jpeg';
     font-family: inherit;
     font-weight: bold;
 }
+
+.small-text {
+    margin-top: -80px;
+    // color: #333;
+    font-weight: bold;
+    opacity: 0.5;
+}
