--- a/Quiz-App/css/style.css
+++ b/Quiz-App/css/style.css
@@ -1,1 +1,64 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: #f3f3fb;
+  background-image: linear-gradient(315deg, #f3f3fb 0%, #bcbcc6 75%);
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quiz-container {
+  background: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
+  width: 600px;
+  max-width: 100%;
+}
+
+.quiz-header {
+  padding: 2rem;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+ul li {
+  font-size: 1.1rem;
+  margin: 1rem 0;
+}
+
+ul li label {
+  cursor: pointer;
+}
+
+h2 {
+  padding: 1rem;
+  text-align: center;
+  margin: 0;
+}
+
+button {
+  background-color: #4370e7;
+  color: #fff;
+  display: block;
+  width: 100%;
+  font-family: inherit;
+  border: none;
+  font-size: 1.5rem;
+  padding: 1.3rem;
+  border-radius: 0 0 10px 10px;
+}
+
+button:hover {
+  opacity: 0.9;
+}
