--- a/React-Todo-list-app/todo_app/src/Todo.css
+++ b/React-Todo-list-app/todo_app/src/Todo.css
@@ -77,3 +77,30 @@
 .deleteTodo {
     cursor: pointer;
 }
+
+.editModal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#innerModal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.innerModalHeading {
+    color:#e91e63;
+    font-family: "Roboto", sans-serif;
+    word-spacing: 0.3rem;
+    font-weight: bold;
+}
+
+.modalChanges {
+    display: grid;
+    grid-template-columns: 90% 30%; 
+    justify-content: center;
+    grid-gap: 10px;
+}
