--- a/Expense Tracker/style.css
+++ b/Expense Tracker/style.css
@@ -3,6 +3,7 @@
 :root {
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   --error-color: #e74c3c;
+  --success-color: #2ecc71;
 }
 
 * {
@@ -155,6 +156,11 @@ input[type='number'] {
   border-color: var(--error-color);
 }
 
+.form-control.success input {
+  border-color: var(--success-color);
+}
+
 .form-control small {
   color: var(--error-color);
+  visibility: hidden;
 }
